--- a/posts/templates/feed.html
+++ b/posts/templates/feed.html
@@ -14,7 +14,7 @@
 					<div class=".col-lg-4 offset-lg-4">
 
 						<div class="media">
-							<img class="mr-3 rounded-circle" src="{{ post.user.picture }}" alt="{{ post.user.name }}">
+							<img class="mr-3 rounded-circle" src="{{ post.user.picture }}" alt="{{ post.user.name }}" style="max-height:40px;">
 							<div class="media-body">
 								<h5 class="mt-0"> {{ post.user.name }} </h5>
 								{{ post.timestamp }}
@@ -29,4 +29,4 @@
 			</div>
 		</div>
 	</body>
-</html> 
+</html>
