Sign up system working!! log out working too!!

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,8 +21,11 @@
 					</a>
 				</li>
 
+
+
+				<!-- logout button -->
 				<li class="nav-item nav-icon">
-					<a href="">
+					<a href="{% url "logout" %}"> <!-- asi nos aseguramos que si cambia la ruta funciana, la llamanmos por el nombre -->
 						<i class="fas fa-sign-out-alt"></i>
 					</a>
 				</li>
