--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,14 +7,21 @@
 {% block container %}
 
 	{% if error %}
-		<p style="color: red;">{{ error }}</p>	
+		<p class="alert alert-danger">{{ error }}</p>	
 	{% endif %}
 	<form method="POST" action="{% url "login" %}">
 		{% csrf_token %}
 
-		<input type="text" name="username" placeholder="Username" />
-		<input type="password" name="password" placeholder="password" />
+		<div class="form-group">
+			<input class="form-control" type="text" placeholder="Username" name="username" />
+		</div>
 
-		<button type="submit">Sign in!</button>
+		<div class="form-group">
+			<input class="form-control" type="password" name="password" placeholder="password" />
+		</div>
+
+	
+		<button class="btn btn-primary btn-block mt-5">Sign in!</button>
+
 	</form>
 {% endblock %}
