--- a/templates/posts/feed.html
+++ b/templates/posts/feed.html
@@ -3,27 +3,45 @@
 {% block head_content %}
 	<title>Fakegram feed</title>
 {% endblock %}
-
+<!DOCTYPE html>
 {% block container %}
 
-	<div class="row">
+	<div class="container">
+		<div class="row">
+			{% for post in posts %}
+				<div class="col-sm-12 col-md-8 offset-md-2 mt-5 p-0 post-container">
+					<div class="media pt-3 pl-3 pb-1">
+						
+						<img
+							class="mr-3 rounded-circle"
+							height="35" 
+							src="{{ post.profile.picture.url }}"
+							alt="{{ post.user.get_full_name}}"
+						/>
 
-	{% for post in posts %}
-		<div class=".col-lg-4 offset-lg-4">
+						<div class="media-body">
+							<p style="margin-top: 5px;">{{ post.user.get_full_name }}</p>	
+						</div>
+					</div>
 
-			<div class="media">
-				<img class="mr-3 rounded-circle" src="{{ post.user.picture }}" alt="{{ post.user.name }}" style="max-height:40px;">
-				<div class="media-body">
-					<h5 class="mt-0"> {{ post.user.name }} </h5>
-					{{ post.timestamp }}
-				</div> <!-- end media-body -->
-			</div> <!-- end media -->
+					<img
+						class="width: 100%;" 
+						src="{{ post.photo.url }}"
+						alt="{{ post.title }}"
+					/>
 
-			<img class="img-fluid mt-3 border rounded" src="{{ post.picture }}" alt="{{ post.name }}">
-			<h6 class="ml-1 mt-1">{{ post.name }}</h6>
+					<p class="mt-1 ml-2">
+						<a href="" style="color: #000; font-size: 20px;">
+							<i class="far fa-heart"></i>
+						</a> 30 likes
+					</p>
 
-		</div> <!-- end .col-lg-4 offset-lg-4 -->
-	{% endfor %}
+					<p class="ml-2 mt-0 mb-2">
+						<b>{{ post.title }}</b> - <small>{{ post.created }}</small>
+					</p>
+				</div>
+			{% endfor %}
+		</div>
 	</div>
 		
 {% endblock %}
