--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -24,4 +24,6 @@
 		<button class="btn btn-primary btn-block mt-5">Sign in!</button>
 
 	</form>
+
+	<p class="mt-4">Don't have an account yet? <a href="{% url "signup" %}">Sign up</a></p>
 {% endblock %}
