--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		
 		{# Fakegram logo #}
-		<a href="{% url "feed" %}" class="navbar-brand pr-5" style="border-right: 1px solid #efefef;">
+		<a href="{% url "posts:feed" %}" class="navbar-brand pr-5" style="border-right: 1px solid #efefef;">
 			<img src="{% static "img/instagram.png" %}" height="45" class="d-inline-block align-top" />
 		</a>
 
@@ -23,7 +23,7 @@
 			
 				{# New post #}
 				<li class="nav-item nav-icon">
-					<a href="{% url "create_post" %}">
+					<a href="{% url "posts:create" %}">
 						<i class="fas fa-plus"></i>
 					</a>
 				</li>
@@ -32,7 +32,7 @@
 
 				<!-- logout button -->
 				<li class="nav-item nav-icon">
-					<a href="{% url "logout" %}"> <!-- asi nos aseguramos que si cambia la ruta funciana, la llamanmos por el nombre -->
+					<a href="{% url "users:logout" %}"> <!-- asi nos aseguramos que si cambia la ruta funciana, la llamanmos por el nombre -->
 						<i class="fas fa-sign-out-alt"></i>
 					</a>
 				</li>
