--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,8 +3,15 @@
 	<div class="container">
 		
 		{# Fakegram logo #}
-		<a href="{% url "posts:feed" %}" class="navbar-brand pr-5" style="border-right: 1px solid #efefef;">
-			<img src="{% static "img/instagram.png" %}" height="45" class="d-inline-block align-top" />
+		<a 
+			href="{% url "posts:feed" %}" 
+			class="navbar-brand pr-5" 
+			style="border-right: 1px solid #efefef;"
+		>
+			<img 
+				src="{% static "img/instagram.png" %}" 
+				height="45" 
+				class="d-inline-block align-top" />
 		</a>
 
 		<div class="collapse navbar-collapse">
@@ -14,16 +21,26 @@
 				<li class="nav-item">
 					<a href="">
 						{% if request.user.profile.picture %}
-							<img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle" />
+							<img 
+								src="{{ request.user.profile.picture.url }}" 
+								height="35" 
+								class="d-inline-block align-top rounded-circle" 
+							/>
 						{% else %}
-							<img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle" />
+							<img 
+								src="{% static 'img/default-profile.png' %}" 
+								height="35" 
+								class="d-inline-block align-top rounded-circle" 
+							/>
 						{% endif %}
 					</a>
 				</li>
 			
 				{# New post #}
 				<li class="nav-item nav-icon">
-					<a href="{% url "posts:create" %}">
+					<a 
+						href="{% url "posts:create" %}"
+					>
 						<i class="fas fa-plus"></i>
 					</a>
 				</li>
@@ -32,7 +49,9 @@
 
 				<!-- logout button -->
 				<li class="nav-item nav-icon">
-					<a href="{% url "users:logout" %}"> <!-- asi nos aseguramos que si cambia la ruta funciana, la llamanmos por el nombre -->
+					<a 	
+						href="{% url "users:logout" %}"
+					> 
 						<i class="fas fa-sign-out-alt"></i>
 					</a>
 				</li>
