--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,7 +9,7 @@
 	{% if error %}
 		<p class="alert alert-danger">{{ error }}</p>	
 	{% endif %}
-	<form method="POST" action="{% url "login" %}">
+	<form method="POST" action="{% url "users:login" %}">
 		{% csrf_token %}
 
 		<div class="form-group">
@@ -25,5 +25,5 @@
 
 	</form>
 
-	<p class="mt-4">Don't have an account yet? <a href="{% url "signup" %}">Sign up</a></p>
+	<p class="mt-4">Don't have an account yet? <a href="{% url "users:signup" %}">Sign up</a></p>
 {% endblock %}
