--- a/templates/nav.html
+++ b/templates/nav.html
@@ -39,7 +39,7 @@
 				{# New post #}
 				<li class="nav-item nav-icon">
 					<a 
-						href="{% url "posts:create" %}"
+						href="{% url "posts:create_posts" %}"
 					>
 						<i class="fas fa-plus"></i>
 					</a>
