--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-	<title> @{{ request.user.username }} | Fakegram </title>
+	<title> @{{ user.username }} | Fakegram </title>
 {% endblock %}
 
 {% block container %}
@@ -11,8 +11,8 @@
 			
 			<div class="col-sm-4 d-flex justify-content-center">
 				<img 
-					src="{{ request.user.profile.picture.url }}"
-					alt="@{{ request.user.username }}" 
+					src="{{ user.profile.picture.url }}"
+					alt="@{{ user.username }}" 
 					class="rounded-circle" 
 					width="150px" 
 				/>
@@ -20,9 +20,9 @@
 
 			<div class="col-sm-8">
 				<h2 style="font-weight: 100;">
-					{{ request.user.username }}
+					{{ user.username }}
 
-					{% if request.user == user %}
+					{% if user == request.user %}
 						<a 
 							href="{% url "users:update_profile" %}"
 							class="ml-5 btn btn-sm btn-outline-info" 
@@ -41,21 +41,21 @@
 
 				<div class="row mt-2" style="font-size: 1.2em">
 					<div class="col-sm-4">
-						<b>{{ request.user.profile.posts_count }}785</b> posts
+						<b>{{ user.profile.posts_count }}785</b> posts
 					</div>
 
 					<div class="col-sm-4">
-						<b>{{ request.user.profile.followers }}785</b> followers
+						<b>{{ user.profile.followers }}785</b> followers
 					</div>
 
 					<div class="col-sm-4">
-						<b>{{ request.user.profile.following }}785</b> following
+						<b>{{ user.profile.following }}785</b> following
 					</div>
 				</div>
 
 				<div class="row mt-4">
 					<div class="col-sm-12">
-						<p>{{ request.user.profile.biography }}</p>
+						<p>{{ user.profile.biography }}</p>
 					</div>
 				</div>
 			</div>
