--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,7 +19,7 @@
 				
 				{# Profile image #}
 				<li class="nav-item">
-					<a href="">
+					<a href="{% url "users:detail" request.user.username %}">
 						{% if request.user.profile.picture %}
 							<img 
 								src="{{ request.user.profile.picture.url }}" 
