--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -61,4 +61,23 @@
 			</div>
 		</div>
 	</div>
+
+	<hr>
+
+	{# Here we show the posts of this user #}
+	<div class="container" id="user-posts">
+		<div class="row mt-3">
+			{% for post in posts %}
+			<div class="col-sm-4 pt-5 pb-5 pr-5 pl-5 d-flex justify-content-center align-items-center">
+				<a href="" class="border">
+					<img 
+						src="{{ post.photo.url }}"
+						alt="{{ post.title }}"
+						class="img-fluid" 
+					/>
+				</a>
+			</div>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
